[project]
name = "apicat"
version = "0.1.0"
description = ""
authors = [
    {name = "YeyingXingchen",email = "yeyingxingchen@yeah.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    fastapi>=0.115.8
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
